--- a/app/rpg_battlemap/priv/www/partials/grid.html
+++ b/app/rpg_battlemap/priv/www/partials/grid.html
@@ -3,7 +3,7 @@
         <defs>
             <pattern x="0" y="0" width="32" height="32" id="gridPattern"
                     patternUnits="userSpaceOnUse"
-                    patternTransform="translate({{translate.x}}, 8) scale(1)">
+                    patternTransform="translate({{ translate.x }} {{ translate.y }}) scale({{ scale }})">
 
             <rect
                     x="0"
