--- a/app/rpg_battlemap/templates/base.html
+++ b/app/rpg_battlemap/templates/base.html
@@ -49,6 +49,8 @@
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular-resource.min.js"></script>
 	<script src="/js/app.js"></script>
 	<script src="/js/battlemap.controllers.js"></script>
+	<script src="/js/hamster.js"></script>
+	<script src="/js/mousewheel.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 	<script type="text/javascript" src="//login.persona.org/include.js"></script>
 	<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
