--- a/app/rpg_battlemap/priv/www/partials/layers_menu.html
+++ b/app/rpg_battlemap/priv/www/partials/layers_menu.html
@@ -1,8 +1,12 @@
 <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">Layers<span class="caret"> </span></a>
 
 <ul class="dropdown-menu" ng-controller="ListLayersCtrl">
-	<li ng-repeat="layer in layers">
-		<i ng-class="{'icon-eye-open':layer.visible}"></i> {{ layer.name }}
+	<li ng-repeat="layer in layers" style="clear:both;">
+		<i ng-class="{'icon-eye-open':layer.visible}"></i>
+		{{ layer.name }}
+		<button ng-hide="layers.length < 2" ng-click="removeLayer(layer)" class="pull-right">
+			<i class="icon-remove"></i>
+		</button>
 	</li>
 	<li class="divider"></li>
 	<li ng-show="user == map.owner">
