--- a/app/rpg_battlemap/priv/www/partials/layers_menu.html
+++ b/app/rpg_battlemap/priv/www/partials/layers_menu.html
@@ -1,17 +1,23 @@
 <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">Layers<span class="caret"> </span></a>
 
 <ul class="dropdown-menu" ng-controller="ListLayersCtrl">
+
 	<li ng-repeat="layer in layers" style="clear:both;">
-		<i ng-class="{'icon-eye-open':layer.visible}"></i>
-		{{ layer.name }}
-		<button ng-hide="layers.length < 2" ng-click="removeLayer(layer)" class="pull-right">
-			<i class="icon-remove"></i>
-		</button>
+		<p ng-click="layer.visible = ! layer.visible">
+			<i ng-class="{'icon-eye-open':layer.visible}"></i>
+			{{ layer.name }}
+			<button ng-hide="layers.length < 2" ng-click="removeLayer(layer)" class="pull-right">
+				<i class="icon-remove"></i>
+			</button>
+		</p>
 	</li>
+
 	<li class="divider"></li>
+
 	<li ng-show="user == map.owner">
 		<label for="layerNewName">New Layer Name</label>
 		<input ng-model="new_layer_name" ng-click="stopPropagation($event)" />
 		<button ng-click="newLayer(new_layer_name)">New</button>
 	</li>
+
 </ul>
