Use of span cleans up look a bit.
div is block, span is inline, which means the tools dont' get bumped down.

--- a/app/rpg_battlemap/priv/www/partials/header.html
+++ b/app/rpg_battlemap/priv/www/partials/header.html
@@ -12,8 +12,8 @@
             </div>
         </div>
 
-        <div class="action" ng-switch on="noToolbar">
-            <div ng-switch-when="false" ng-include="'/partials/map_toolbar.html'"></div>
-        </div>
+        <span class="action" ng-switch on="noToolbar">
+            <span ng-switch-when="false" ng-include="'/partials/map_toolbar.html'"></span>
+        </span>
     </div>
 </header>
