--- a/app/rpg_battlemap/priv/www/partials/map_toolbar.html
+++ b/app/rpg_battlemap/priv/www/partials/map_toolbar.html
@@ -1,11 +1,5 @@
-<div class="btn-toolbar pull-right">
+<div class="btn-toolbar pull-right" ng-include="'/partials/map_tool_buttons.html'">
 
-	<div class="btn-group" data-toggle="buttons-radio" ng-include="'/partials/map_tool_buttons.html'" ng-controller="MapToolsCtrl">
-	</div>
-
-	<button class="btn btn-small" title="Collapse controls" data-toggle="collapse" data-target="#top-bar" ng-click="handleToggle()">
-		<i ng-class="{'open': 'icon-double-angle-down', 'closed': 'icon-double-angle-up'}[topBarToggle]"></i>
-	</button>
 </div>
 
 <div class="btn-toolbar">
