--- a/app/rpg_battlemap/priv/www/css/battlemap.css
+++ b/app/rpg_battlemap/priv/www/css/battlemap.css
@@ -24,9 +24,8 @@
     display: inline-block;
 }
 
-.navbar .actions .btn-toolbar {
-    margin-top: 0;
-    margin-bottom: 0;
+.navbar .btn-toolbar {
+    margin: 0 7px !important;
 }
 
 /* Table helpers */
@@ -52,3 +51,5 @@ table td.shrink {
 .selected {
     box-shadow: inset 0 0 10px blue;
 }
+
+
