--- a/app/rpg_battlemap/priv/www/css/override.css
+++ b/app/rpg_battlemap/priv/www/css/override.css
@@ -1,3 +1,9 @@
+.navbar.navbar-header .navbar-inner
+{
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
 .navbar.navbar-small .navbar-inner
 {
     min-height: 20px;
@@ -41,3 +47,14 @@
 {
 	padding: 7px;
 }
+
+.text-center
+{
+	text-align: center;
+}
+
+table.table-centered td
+{
+	vertical-align: middle;
+}
+
