When making a combatant you can drag it around.

--- a/app/rpg_battlemap/priv/www/partials/grid.html
+++ b/app/rpg_battlemap/priv/www/partials/grid.html
@@ -41,6 +41,7 @@
                   stoke-width="10"
                   stoke-opacity="1"
                   rx="16"
+                  pointer-events="none"
                 />
                 <rect
                   x="{{combatant.x * 32}}"
