clicking a combatant on the map selects it.

--- a/app/rpg_battlemap/priv/www/partials/grid.html
+++ b/app/rpg_battlemap/priv/www/partials/grid.html
@@ -50,6 +50,7 @@
                   height="{{combatant.size * 32}}"
                   fill="{{combatant.color}}"
                   rx="16"
+                  ng-mousedown="selectCombatant(combatant)"
                 />
                 <rect
                   x="{{combatant.x * 32}}"
