--- a/app/rpg_battlemap/priv/www/partials/grid.html
+++ b/app/rpg_battlemap/priv/www/partials/grid.html
@@ -16,14 +16,23 @@
             </pattern>
         </defs>
 
-        <rect x="0" y="0" width="100%" height="100%" stroke-opacity="0"
-              fill="url(#gridPattern)" style="pointer-events:none;" id="gridRect"/>
-
         <!-- someday I'll figure out how to do this :( ) -->
         <!--<g ng-include="'/partials/layers_svg.html'"></g>-->
-
         <g ng-controller="ListLayersCtrl" transform="translate({{ translate.x }} {{translate.y}}) scale({{ scale }})">
           <g ng-repeat="layer in layers | filter:isVisible">
+
+            <!-- zones -->
+            <g ng-controller="ListZonesCtrl">
+
+              <g ng-repeat="zone in zones" ng-show="layer.id == zone.layer_id">
+
+                <g ng-switch="zone.type">
+                  <rect ng-switch-when="rect" fill="red" x="10" y="20" width="60" height="80" />
+                </g>
+
+              </g>
+
+            </g>
 
             <g ng-controller="ListCombatantsCtrl">
 
@@ -77,6 +86,9 @@
 
           </g>
         </g>
+
+        <rect x="0" y="0" width="100%" height="100%" stroke-opacity="0"
+              fill="url(#gridPattern)" style="pointer-events:none;" id="gridRect"/>
 
         <g ng-controller="MeasureToolCtrl" ng-show="toolData.measuring">
           <line
