--- a/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
+++ b/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
@@ -1,3 +1,16 @@
+<div class="btn-group" ng-controller="AddZoneToolCtrl">
+	<button class="btn btn-small" ng-class="{'active':toolName == 'Add Zone'}" ng-click="setTool()">{{ name }}</button>
+	<button class="btn btn-small dropdown-toggle" data-toggle="dropdown" ng-click="setTool()">
+		<span class="caret"></span>
+	</button>
+
+	<ul class="dropdown-menu">
+
+		<li>Hi!</li>
+
+	</ul>
+</div>
+
 
 <div class="btn-group" ng-controller="AddCombatantToolCtrl">
 	<button class="btn btn-small" ng-class="{'active':toolName == 'Add Combatant'}" ng-click="setTool()">{{ name_base }}</button>
