--- a/app/rpg_battlemap/priv/www/partials/map_toolbar.html
+++ b/app/rpg_battlemap/priv/www/partials/map_toolbar.html
@@ -52,8 +52,74 @@
 				<input ng-model="combatants.selected.aura_color" ng-change="saveCombatant($event, combatants.selected)" ng-click="stopPropagation($event)" name="selCombatantAuraColor" type="color" />
 			</li>
 
+			<li class="divider"></li>
+
 			<li>
 				<button class="btn btn-danger" ng-click="deleteCombatant($event, combatants.selected)">Delete</button>
+			</li>
+
+		</ul>
+	</div>
+
+	<div class="btn-group" ng-controller="ListZonesCtrl" ng-show="user == map.owner">
+		<a class="btn btn-small dropdwon-toggle" data-toggle="dropdown" href="#">Zones<span class="caret"></span></a>
+		<ul class="dropdown-menu">
+
+			<li ng-repeat="zone in zones | filter:zoneIsVisible()">
+				<p ng-click="selectZone(zone)" ng-class="{'selected':zones.selected == zone}">
+					{{ zone.name }}
+				</p>
+			</li>
+
+			<li class="divider" ng-show="zones.selected"></li>
+
+			<li>
+				<p ng-click="selectZone(null)" ng-show="zones.selected">Clear Selected</p>
+			</li>
+
+		</ul>
+	</div>
+
+	<div class="btn-group" ng-controller="ListZonesCtrl" ng-show="zones.selected">
+		<a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
+			{{zones.selected.name}} <span class="caret"></span>
+		</a>
+		<ul class="dropdown-menu">
+
+			<li>
+				<label for="selZoneName">Name</label>
+				<input ng-model="zones.selected.name" name="selZoneName" ng-click="stopPropagation($event)" ng-change="saveZone(zones.selected, $event)" />
+			</li>
+
+			<li>
+				<label for="selZoneFill">Fill Color</label>
+				<input ng-model="zones.selected.fill_color" name="selZoneFill" ng-click="stopPropagation($event)" type="color" ng-change="saveZone(zones.selected, $event)"/>
+			</li>
+
+			<li>
+				<label for="selZoneFillOpactiy">Fill Opacity</label>
+				<input ng-model="zones.selected.fill_opacity" name="selZoneFillOpacity" ng-click="stopPropagation($event)" type="number" min="0" max="1" step="0.1" ng-change="saveZone(zones.selected, $event)"/>
+			</li>
+
+			<li>
+				<label for="selZoneStroke">Stroke Color</label>
+				<input ng-model="zones.selected.stroke_color" name="selZoneStroke" ng-click="stopPropagation($event)" type="color" ng-change="saveZone(zones.selected, $event" />
+			</li>
+
+			<li>
+				<label for="selZoneStrokeWidth">Stroke Width</label>
+				<input ng-model="zones.selected.stroke_width" name="selZoneStrokeWidth" ng-click="stopPropagation($event)" type="number" min="0" max="10" step="1" ng-change="saveZone(zones.selected, $event)" />
+			</li>
+
+			<li>
+				<label for="selZoneStrokeOpacity">Stroke Opacity</label>
+				<input ng-model="zones.selected.stroke_opacity" name="selZoneStrokeOpactiy" ng-click="stopPropagation($event)" type="number" min="0" max="1" step="0.1" ng-change="saveZone(zones.selected, $event)"/>
+			</li>
+
+			<li class="divider"></li>
+
+			<li>
+				<button class="btn btn-danger" ng-click="removeZone($event, zones.selected)">Delete</button>
 			</li>
 
 		</ul>
