Ui can remove zones now.

--- a/app/rpg_battlemap/priv/www/partials/map_toolbar.html
+++ b/app/rpg_battlemap/priv/www/partials/map_toolbar.html
@@ -119,7 +119,7 @@
 			<li class="divider"></li>
 
 			<li>
-				<button class="btn btn-danger" ng-click="removeZone($event, zones.selected)">Delete</button>
+				<button class="btn btn-danger" ng-click="removeZone(zones.selected, $event)">Delete</button>
 			</li>
 
 		</ul>
