One can edit rectangular zones now.

--- a/app/rpg_battlemap/priv/www/partials/grid.html
+++ b/app/rpg_battlemap/priv/www/partials/grid.html
@@ -36,7 +36,8 @@
                     x="{{zone.x * 32}}"
                     y="{{zone.y * 32}}"
                     width="{{zone.width * 32}}"
-                    height="{{zone.height * 32}}" />
+                    height="{{zone.height * 32}}" 
+                    ng-mousedown="setToolOverride(zone, $event)" />
                 </g>
 
               </g>
@@ -95,6 +96,20 @@
 
           </g>
         </g>
+
+        <g ng-controller="EditZoneCtrl" transform="translate({{ translate.x }} {{translate.y}}) scale({{ scale }})">
+          <circle
+            ng-repeat="point in points"
+            cx="{{point.x * 32}}"
+            cy="{{point.y * 32}}"
+            r="8"
+            fill="white"
+            stroke="black"
+            stroke-width="4"
+            ng-mousedown="movingPoint(point, $event)"
+          />
+        </g>
+
 
         <rect x="0" y="0" width="100%" height="100%" stroke-opacity="0"
               fill="url(#gridPattern)" style="pointer-events:none;" id="gridRect"/>
